Less restrictive internal column count limit.

Just allow up to 10000 columns unconditionally.

We used to have severe performance problems with many columns (O(n^2)),
but that should be long gone, thanks to
https://chromium-review.googlesource.com/c/chromium/src/+/1070562/

This is essentially a revert of
https://chromium-review.googlesource.com/c/chromium/src/+/1068929/
(and earlier clamping attempts).

Bug: 918112, 808189
Change-Id: I3c767fa4f2da5197d1a02c8f4ad89fbc35c5614d
Reviewed-on: https://chromium-review.googlesource.com/c/1392955
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619413}
Former-commit-id: 64752ee4b1b93f069b2d64a4327af81319f45191