third_party/blink/renderer/core/layout/multi_column_fragmentainer_group.h
@@ -195,8 +195,6 @@ class CORE_EXPORT MultiColumnFragmentainerGroup {
   // Maximum logical height allowed.
   LayoutUnit max_logical_height_;
 
-  unsigned actual_column_count_allowance_ = 0;
-
   bool is_logical_height_known_ = false;
 };
 
